--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
   "main": "main.ts",
   "repository": "git@github.com:PierreDubosq/TS-Pokedex.git",
   "author": "Pierre Dubosq <pierre@dubosq.eu>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "typescript": "^5.0.2"
+  }
 }
