--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "typescript": "^5.0.2"
   },
   "scripts": {
-    "build": "tsc -p tsconfig.json"
+    "build": "tsc -p tsconfig.json",
+    "start": "node dist/main.js"
   }
 }
