--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Pierre Dubosq <pierre@dubosq.eu>",
   "license": "MIT",
   "dependencies": {
+    "@apollo/server": "^4.5.0",
     "graphql": "^16.6.0",
     "poseidon-logger": "^1.0.2",
     "typescript": "^5.0.2"
