--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "dependencies": {
     "@apollo/server": "^4.5.0",
+    "express": "^4.18.2",
     "graphql": "^16.6.0",
     "poseidon-logger": "^1.0.2",
     "typescript": "^5.0.2"
