--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "dependencies": {
     "@apollo/server": "^4.5.0",
+    "@types/express": "^4.17.17",
     "@types/node": "^18.15.3",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
