--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@apollo/server": "^4.5.0",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.3",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
     "poseidon-logger": "^1.0.2",
