--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,9 @@ version: '3'
 
 services:
 
-  app:
-    build: ./app
-    container_name: pokedex-app
+  api:
+    build: ./api
+    container_name: pokedex-api
     env_file:
       - .env
     networks:
