--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
+    "mongoose": "^7.0.2",
     "poseidon-logger": "^1.0.2",
     "typescript": "^5.0.2"
   },
