--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^18.15.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "env-var": "^7.3.0",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
     "mongoose": "^7.0.2",
