--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.3",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "env-var": "^7.3.0",
