--- a/api/package.json
+++ b/api/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "dependencies": {
     "@apollo/server": "^4.5.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.3",
