--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "env-var": "^7.3.0",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
+    "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.2",
     "poseidon-logger": "^1.0.2",
