--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 MONGO_INITDB_ROOT_USERNAME=--- FILL ---
 MONGO_INITDB_ROOT_PASSWORD=--- FILL ---
 MONGO_INITDB_DATABASE=--- FILL ---
+
+TOKEN_KEY=--- FILL ---
