--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.15.3",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
