--- a/api/package.json
+++ b/api/package.json
@@ -25,7 +25,7 @@
     "mongoose": "^7.0.2",
     "multer": "^1.4.5-lts.1",
     "poseidon-logger": "^1.0.2",
-    "typescript": "^5.0.2"
+    "typescript": "4.9.5"
   },
   "scripts": {
     "build": "tsc -p tsconfig.json",
