--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.2",
     "graphql": "^16.6.0",
     "http-status-codes": "^2.2.0",
+    "jest": "^29.5.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.2",
     "multer": "^1.4.5-lts.1",
