--- a/api/package.json
+++ b/api/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^7.0.2",
     "multer": "^1.4.5-lts.1",
     "poseidon-logger": "^1.0.2",
+    "supertest": "^6.3.3",
     "typescript": "4.9.5"
   },
   "scripts": {
