--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
     "@types/jsonwebtoken": "^9.0.1",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.15.3",
+    "@types/supertest": "^2.0.12",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
