--- a/api/package.json
+++ b/api/package.json
@@ -29,6 +29,7 @@
     "multer": "^1.4.5-lts.1",
     "poseidon-logger": "^1.0.2",
     "supertest": "^6.3.3",
+    "ts-jest": "^29.0.5",
     "typescript": "4.9.5"
   },
   "scripts": {
