--- a/api/package.json
+++ b/api/package.json
@@ -34,6 +34,7 @@
   },
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "start": "node dist/main.js"
+    "start": "node dist/main.js",
+    "test": "jest --config jest.config.json --runInBand --detectOpenHandles --forceExit"
   }
 }
