--- a/api/package.json
+++ b/api/package.json
@@ -35,6 +35,6 @@
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "start": "node dist/main.js",
-    "test": "jest --config jest.config.json --runInBand --detectOpenHandles --forceExit"
+    "test": "jest --config jest.config.json --runInBand --forceExit --coverage"
   }
 }
