Feat: add tests CI/CD

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -24,3 +24,20 @@ jobs:
       - name: Build check
         run: yarn build
         working-directory: ./api
+
+  tests:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Setup node
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18.x'
+      
+      - name: Install dependencies
+        run: yarn install
+        working-directory: ./api
+
+      - name: Build check
+        run: yarn test
+        working-directory: ./api
