--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "env-var": "^7.3.0",
+    "eslint": "^8.36.0",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
     "http-status-codes": "^2.2.0",
