--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
     "@types/multer": "^1.4.7",
     "@types/node": "^18.15.3",
     "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
