--- a/api/package.json
+++ b/api/package.json
@@ -37,6 +37,7 @@
   },
   "scripts": {
     "build": "tsc -p tsconfig.json",
+    "lint": "eslint --ext .ts .",
     "start": "node dist/main.js",
     "test": "jest --config jest.config.json --runInBand --forceExit --coverage"
   }
