--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -10,6 +10,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    environment: githubactions
     steps:
       - uses: actions/checkout@v3
       - name: Setup node
@@ -27,6 +28,7 @@ jobs:
 
   lint:
     runs-on: ubuntu-latest
+    environment: githubactions
     steps:
       - uses: actions/checkout@v3
       - name: Setup node
@@ -44,6 +46,7 @@ jobs:
 
   tests:
     runs-on: ubuntu-latest
+    environment: githubactions
     steps:
       - uses: actions/checkout@v3
       - name: Setup node
